syntax = "proto3";

package supplier;

service SupplierService {
  rpc findAll (FindAll) returns (SupplierResponseList) {}
  rpc findByVatNumber (FindByVatNumber) returns (SupplierResponse) {}
  rpc create (CreateSupplierInput) returns (SupplierResponse) {}
  rpc update (UpdateSupplierInput) returns (SupplierResponse) {}
  rpc delete (DeleteSupplier) returns (SupplierResponse) {}
}

message FindAll {
}

message FindByVatNumber {
  int64 vatNumber = 1;
}

message CreateSupplierInput {
  int64 vatNumber = 1;
  string name = 2;
  string country = 3;
  string roles = 4;
  string sector = 5;
  string certificateLink = 6;
}

message SupplierResponse {
  int64 vatNumber = 1;
  string name = 2;
  string country = 3;
  string roles = 4;
  string sector = 5;
  string certificateLink = 6;
}

message SupplierResponseList {
  repeated SupplierResponse suppliers = 1;
}


message UpdateSupplierInput {
  int64 vatNumber = 1;
  string name = 2;
  string country = 3;
  string roles = 4;
  string sector = 5;
  string certificateLink = 6;
}

message DeleteSupplier {
  int64 vatNumber = 1;
}


message Status {
  int32 status = 1;
  string message = 2;
}


